# hmaccalc

./: Makefile  README.md  hmaccalc-0.9.12-0.9.13.patch  hmaccalc-0.9.13.tar.gz.sig  hmaccalc.spec
src/: LICENSE  Makefile.am  Makefile.in  README  configure  configure.ac  hmaccalc.spec
src/src/: Makefile.am  Makefile.in  config.h.in  hmac.c  md2hmac.c  md4hmac.c  md5hmac.c  sha1hmac.c  sha256hmac.8  sha256hmac.c  sha384hmac.c  sha512hmac.8.in  sha512hmac.c
src/test/: Makefile.am  Makefile.in  run-test.c  run-tests.sh  sha1hmac.c  sha256hmac.c  sha384hmac.c  sha512hmac.c
